<resources>
    <string name="app_name">HW1 Dialler</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_asterisk">*</string>
    <string name="_hash">#</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_call">Make the call</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sd1">SD1</string>
    <string name="sd2">SD2</string>
    <string name="sd3">SD3</string>
    <string name="_plus">+</string>
    <string name="_C">C</string>
    <string name="preference_file_key">com.hw1dialler.PREFERENCE_FILE_KEY</string>
</resources>
